[gd_scene load_steps=14 format=3 uid="uid://c3hy17fdxc4xd"]

[ext_resource type="Script" path="res://Scenes/Slideshow.gd" id="1_43p4v"]
[ext_resource type="Texture2D" uid="uid://cjqjxru23qiwi" path="res://Assets/Old paper 39 stock by ofruin-stock on DeviantArt.jpg" id="2_j6kl8"]
[ext_resource type="FontFile" uid="uid://sia1vmykl6p7" path="res://Assets/Fonts/Blockstepped.ttf" id="4_hw5e3"]
[ext_resource type="Texture2D" uid="uid://jp30f1x58j6" path="res://Assets/Slideshow/banner_bottom.png" id="4_mvuv5"]
[ext_resource type="Texture2D" uid="uid://b8fj841fwcc7b" path="res://Assets/Slideshow/banner_top.png" id="5_k6sk5"]
[ext_resource type="Texture2D" uid="uid://hpje6ad5rv5a" path="res://Assets/Slideshow/text_label1.png" id="6_knihj"]
[ext_resource type="Texture2D" uid="uid://f7t65ewniv0c" path="res://Assets/Slideshow/text_label2.png" id="7_bpi2m"]
[ext_resource type="Texture2D" uid="uid://bf6uctxgq4l2" path="res://Assets/Slideshow/text_label3.png" id="8_o2q1k"]
[ext_resource type="Texture2D" uid="uid://bqmc2v8e1cpvk" path="res://Assets/Slideshow/text_label4.png" id="9_dxofc"]

[sub_resource type="Animation" id="Animation_lb0wk"]
resource_name = "Bounce"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BannerBottom:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 680), Vector2(960, 700)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BannerTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 436), Vector2(960, 416)]
}

[sub_resource type="Animation" id="Animation_015vq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BannerBottom:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 680)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BannerTop:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 416)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1una2"]
_data = {
"Bounce": SubResource("Animation_lb0wk"),
"RESET": SubResource("Animation_015vq")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_7nl1a"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("6_knihj")
}, {
"duration": 1.0,
"texture": ExtResource("7_bpi2m")
}, {
"duration": 1.0,
"texture": ExtResource("8_o2q1k")
}, {
"duration": 1.0,
"texture": ExtResource("9_dxofc")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[node name="Slideshow" type="CanvasLayer"]
script = ExtResource("1_43p4v")

[node name="Image1" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.960784)
position = Vector2(957.589, 545.408)
rotation = -1.57079
scale = Vector2(1.79803, 2.1223)
texture = ExtResource("2_j6kl8")

[node name="Timer" type="Timer" parent="."]

[node name="ImageSprite" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
position = Vector2(976, 536)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 544)

[node name="BannerBottom" type="Sprite2D" parent="."]
modulate = Color(0.465277, 0.319576, 0.23069, 1)
position = Vector2(960, 680)
scale = Vector2(1.9, 1.48889)
texture = ExtResource("4_mvuv5")

[node name="BannerTop" type="Sprite2D" parent="."]
modulate = Color(0.466667, 0.317647, 0.231373, 1)
position = Vector2(960, 416)
scale = Vector2(1.9, 1.49444)
texture = ExtResource("5_k6sk5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1una2")
}
autoplay = "Bounce"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.466667, 0.317647, 0.231373, 1)
position = Vector2(968, 896)
scale = Vector2(1.75, 1.75)
sprite_frames = SubResource("SpriteFrames_7nl1a")
autoplay = "default"
frame = 3
frame_progress = 1.0

[node name="SkipButton" type="Button" parent="."]
modulate = Color(0.466667, 0.317647, 0.231373, 1)
offset_left = 1784.0
offset_top = 48.0
offset_right = 1909.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(0.466667, 0.317647, 0.231373, 1)
theme_override_fonts/font = ExtResource("4_hw5e3")
theme_override_font_sizes/font_size = 42
text = "Skip"
icon = ExtResource("6_knihj")
flat = true
icon_alignment = 1

[node name="TextLabel" type="Label" parent="."]
offset_left = 448.0
offset_top = 840.0
offset_right = 1498.0
offset_bottom = 940.0
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.466667, 0.317647, 0.231373, 1)
theme_override_fonts/font = ExtResource("4_hw5e3")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
